# libnexus

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  atom.mk  build.sh
cmake/: nexusConfig.cmake.in
include/: nexus.h  nexus.hpp
protobuf/: CMakeLists.txt  foo.proto  message.proto
src/: log.h  message.c  message.cpp  message.h  nexus_priv.h  node.c  node.cpp  node.h
tests/: CMakeLists.txt  test_message.cpp  test_node.cpp
tools/: CMakeLists.txt  nexus-cli.c  nexus-cli.cpp
